--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+.ss{
+  background-image: url("https://images.unsplash.com/photo-1493723843671-1d655e66ac1c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8YWRtaW58ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80");
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
